--- a/app/views/commissioning_forms/_inverter_form.html.erb
+++ b/app/views/commissioning_forms/_inverter_form.html.erb
@@ -7,11 +7,11 @@
 <p>
 <%= f.label :qty_of_inverter %>
 <br>
-<%= f.select :qty_of_inverter, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20] %>
+<%= f.select :qty_of_inverter, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20], {}, {class: "form-control"} %>
 </p>
 <%= f.label :strings %>
 <br>
-<%= f.select :strings, [1,2,3,4,5,6,7,8,9,10] %>
+<%= f.select :strings, [1,2,3,4,5,6,7,8,9,10], {}, {class: "form-control"} %>
 </p>
   <%= f.label :avg_voltage_dc %>
 <br>
@@ -28,7 +28,7 @@
 </p>
 <%= f.label :lc_main_wire_gauge %>
 <br>
-<%= f.select :lc_main_wire_gauge, [1,2,3,4,5,6,7,8,9,10,12] %>
+<%= f.select :lc_main_wire_gauge, [1,2,3,4,5,6,7,8,9,10,12], {}, {class: "form-control"} %>
 </p>
 
 <%= f.label :kwh_total %>
