--- a/app/views/commissioning_forms/index.html.erb
+++ b/app/views/commissioning_forms/index.html.erb
@@ -1,14 +1,14 @@
-<h1>Listing commissioning_forms</h1>
+<h1>Listing commissioned jobs</h1>
 
-     
-      Job
-      
-    
-<%= form_tag( commissioning_forms_path, method: :get ) do %>
-<%= text_field_tag :search %>
-<%= submit_tag "search" %>
-<% end %>
-  
+
+ <div class="form-group">
+  <%= form_tag(commissioning_forms_path, :method => "get",class: "form-inline", id: "search-form") do %>
+   <div class="form-group">
+    <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search byJobs" %>
+   </div>
+          <%= submit_tag "search", class: "btn btn-default" %>
+    <% end %>
+</div>
 <br>
 <%= render :partial => 'pagination' %>
 <br>
