--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,6 +6,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -15,10 +17,10 @@
 <%= link_to "Sign Up", new_user_path %>
 <% end %>
 
-<% flash.each do |key, value| %>
-<%= value %>
-<% end %>
-
+          <% flash.each do |name, msg| -%>
+            <%=  msg  %>
+          <% end %>
+        
 <%= yield %>
 
 </body>
