--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,24 @@
 <h1> New User </h1>
 
 <%= form_for(@user) do |f| %>
-<p>
+<div class="form-group">
 	<%= f.label :name %>
-	<%= f.text_field :name %>
-</p>
-<p>
+	<%= f.text_field :name, class: "form-control" %>
+</div>
+<div class="form-group">
 	<%= f.label :email%>
-	<%= f.email_field :email %>
-</p>
-<p>
+	<%= f.email_field :email, class: "form-control" %>
+</div>
+
+<div class="form-group">
 	<%= f.label :password %>
-	<%= f.password_field :password %>
-</p>
- <p> Password Confirmation: <%= f.password_field :password_confirmation%> </p>
-<p>
-	<%= f.label :prosolar_password %>
-	<%= text_field_tag :prosolar_password %>
-</p>
-<%= f.submit %>
+	<%= f.password_field :password , class: "form-control"%>
+<div class="form-group">
+  Password Confirmation: <%= f.password_field :password_confirmation, class: "form-control"%> 
+<div class="form-group">
+<%= f.label :prosolar_password , class: "form-control"%>
+	<%= text_field_tag :prosolar_password, class: "form-control" %>
+</div>
+<%= f.submit 'Submit', class: "btn btn-default", type:"submit"  %> 
+ 
 <% end %>
