--- a/app/views/commissioning_forms/_inverter_form.html.erb
+++ b/app/views/commissioning_forms/_inverter_form.html.erb
@@ -1,5 +1,5 @@
 
-<h3>Inverter<%="##{@inverter_number}"%></h3>
+<h3>Inverter<%="##{inverter_index}"%></h3>
 <p>
 <%= f.label :inverter_type %>
 <br>
